2008-01-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokerbotlogic.py.in (NoteGeneratorTestCase.test_all):
	Used 'printf' instead of 'echo -e'.

	* tests/test-pokeravatar.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-pokerclient.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-currencyclient.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-pokerservice.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/test-webservice.py.in: Changed to use MYSQL_TEST_* variables.

	* tests/setupMysqlVariables: Changed variables to new MYSQL_TEST ones.

	* tests/Makefile.am: Changed variable exports related to databases
	to use the new test ones as below.

	* configure.ac (POKER_DBROOT_PASSWORD): Added variable.
	(MYSQL_TEST_DBHOST): Added variable.
	(POKER_DBROOT_PASSWORD): Added variable.

2008-01-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/Makefile.am: exported various variables so subprocesses,
	such as the tests, can find them.

	* tests/run.in: Now loads setupMysqlVariables.
	(TZ): Checked to see if it is empty before setting.

	* tests/setupMysqlVariables: Created File.

2007-11-08  Loic Dachary <loic@dachary.org>

	* Release 1.3.0

	* pokernetwork/pokerservice.py: serialization recurse on packets
	  member of PacketList instances
	* tests/test-webservice.py.in: test that PacketList derivatives are
	  serialized properly
	* pokerweb/pages/currency.php: get the mysql server port and host
	  from global variables
	* pokerweb/pages/cash_in.php: currency 1 is the default currency
	* conf/poker.server.xml.in: documentation of auto-cashin

2007-10-03  Loic Dachary  <loic@dachary.org>

	* conf/poker.bot.xml.in, conf/poker.client.xml.in,
	  conf/poker.server.xml.in, examples/poker.bot.xml,
	  examples/poker.server-monotone.xml, examples/poker.server.xml,
	  pokerclient2d/poker2d.xml.in: version bump to 1.3.0
	* tests/test-packets.py.in: packet name is in the tests results